# dynamic-taxes

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
dynamic-taxes/: __init__.py  excited_state_absorption_spectrum.py  loader.py  transient_absorption_spectrum.py
dynamictaxes/: .default.config.swp  .excited_state_absorption_spectrum.py.swp  .main.py.swp  .transient_absorption_spectrum.py.swp  __init__.py  content.json  default.config  excited_state_absorption_spectrum.py  geo2.out  installer.sh  loader.py  main.py  qsub_template.txt  themAGIC.py  transient_absorption_spectrum.py
dynamictaxes/tests/: content.json  test_default.py  test_loader.py  test_spectra.py
examples/: testscript.tmp
