[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamictaxes"
version = "0.1"
authors = [
  { name="Linus Bjarne Dittmer", email="iu254@stud.uni-heidelberg.de" },
  { name="Luis Herguth", email="luis.herguth@stud.uni-heidelberg.de"},
  { name="Nils Oberhof", email="nils.oberhof@iwr.uni-heidelberg.de"}
]
description = "A Python implementation for plotting TA and ESA spectra extracted from QChem TDDFT calculations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LinusBDittmer/dynamic-taxes"

